RESOLVED FIXED272732
[Site Isolation] Fix `testRunner.dumpBackForwardList()`
https://bugs.webkit.org/show_bug.cgi?id=272732
Summary [Site Isolation] Fix `testRunner.dumpBackForwardList()`
Charlie Wolfe
Reported 2024-04-15 23:12:17 PDT
...
Attachments
Charlie Wolfe
Comment 1 2024-04-15 23:15:24 PDT
Radar WebKit Bug Importer
Comment 2 2024-04-15 23:15:46 PDT
EWS
Comment 3 2024-04-16 12:31:58 PDT
Committed 277570@main (29f41210261a): <https://commits.webkit.org/277570@main> Reviewed commits have been landed. Closing PR #27311 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.