[Site Isolation] Fix `testRunner.dumpBackForwardList()` https://bugs.webkit.org/show_bug.cgi?id=272732

Reviewed by Pascoe.

If `testRunner.dumpBackForwardList()` is called from an isolated iframe we need to tell the main frame
web process to dump the back forward list.

* LayoutTests/platform/mac-site-isolation/TestExpectations:
* Tools/WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
(WTR::InjectedBundle::didReceiveMessageToPage):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::dumpBackForwardList):
* Tools/WebKitTestRunner/InjectedBundle/TestRunner.h:
(WTR::TestRunner::dumpBackForwardList): Deleted.
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::didReceiveMessageFromInjectedBundle):

Canonical link: https://commits.webkit.org/277570@main